@@ -3647,3 +3647,192 @@ $wgUniversalEditButton = true;
  * and the functionality will be enabled universally.
  */
 $wgEnforceHtmlIds = true;
+
+/**
+ * Allow the variables in this array to be retrieved through the API
+ * (meta=siteinfo&siprop=configvars).
+ * WARNING: DO NOT put sensitive stuff like $wgDBpassword in here
+ */
+
+$wgAPIReadableConfigVars = array(
+	'wgVersion',
+	'wgSitename',
+	'wgMetaNamespace',
+	'wgMetaNamespaceTalk',
+	'wgServer',
+	'wgServerName',
+	'wgProto',
+	'wgScriptPath',
+	'wgUsePathInfo',
+	'wgScriptExtension',
+	'wgScript',
+	'wgRedirectScript',
+	'wgStylePath',
+	'wgArticlePath',
+	'wgVariantArticlePath',
+	'wgUploadPath',
+	'wgLogo',
+	'wgFavicon',
+	'wgAppleTouchIcon',
+	'wgMathPath',
+	'wgUploadBaseUrl',
+	'wgLegalTitleChars',
+	'wgUrlProtocols',
+	'wgVerifyMimeType',
+	'wgLoadFileinfoExtension',
+	'wgTrivialMimeDetection',
+	'wgActionPaths',
+	'wgUseSharedUploads',
+	'wgSharedUploadPath',
+	'wgFetchCommonsDescriptions',
+	'wgCacheSharedUploads',
+	'wgAllowCopyUploads',
+	'wgMaxUploadSize',
+	'wgUploadNavigationUrl',
+	'wgRepositoryBaseUrl',
+	'wgEmergencyContact',
+	'wgPasswordSender',
+	'wgNoReplyAddress',
+	'wgEnableEmail',
+	'wgEnableUserEmail',
+	'wgUserEmailUseReplyTo',
+	'wgPasswordReminderResendTime',
+	'wgNewPasswordExpiry',
+	'wgSearchType',
+	'wgLanguageCode',
+	'wgGrammarForms',
+	'wgInterwikiMagic',
+	'wgHideInterlanguageLinks',
+	'wgExtraLanguageNames',
+	'wgUseDynamicDates',
+	'wgAmericanDates',
+	'wgTranslateNumerals',
+	'wgDisableLangConversion',
+	'wgDisableTitleConversion',
+	'wgDefaultLanguageVariant',
+	'wgLoginLanguageSelector',
+	'wgLocalInterwiki',
+	'wgRedirectSources',
+	'wgShowIPinHeader',
+	'wgMaxSigChars',
+	'wgMaxArticleSize',
+	'wgMaxNameChars',
+	'wgMaxPPNodeCount',
+	'wgMaxTemplateDepth',
+	'wgMaxPPExpandDepth',
+	'wgCleanSignatures',
+	'wgExtraSubtitle',
+	'wgSiteSupportPage',
+	'wgReadOnly',
+	'wgSpecialVersionShowHooks',
+	'wgColorErrors',
+	'wgShowHostnames',
+	'wgUseCategoryBrowser',
+	'wgUseCommaCount',
+	'wgSysopUserBans',
+	'wgSysopRangeBans',
+	'wgAutoblockExpiry',
+	'wgBlockAllowsUTEdit',
+	'wgSysopEmailBans',
+	'wgWhitelistRead',
+	'wgEmailConfirmToEdit',
+	'wgRestrictionTypes',
+	'wgRestrictionLevels',
+	'wgNamespaceProtection',
+	'wgNonincludableNamespaces',
+	'wgAutoConfirmAge',
+	'wgAutoConfirmCount',
+	'wgAutopromote',
+	'wgAddGroups',
+	'wgRemoveGroups',
+	'wgAvailableRights',
+	'wgDeleteRevisionsLimit',
+	'wgActiveUserEditCount',
+	'wgActiveUserDays',
+	'wgEnotifFromEditor',
+	'wgEmailAuthentication',
+	'wgEnotifWatchlist',
+	'wgEnotifUserTalk',
+	'wgEnotifRevealEditorAddress',
+	'wgEnotifMinorEdits',
+	'wgEnotifImpersonal',
+	'wgEnotifMaxRecips',
+	'wgEnotifUseJobQ',
+	'wgEnotifUseRealName',
+	'wgUsersNotifiedOnAllChanges',
+	'wgRCShowWatchingUsers',
+	'wgPageShowWatchingUsers',
+	'wgRCShowChangedSize',
+	'wgRCChangedSizeThreshold',
+	'wgShowUpdatedMarker',
+	'wgCookieExpiration',
+	'wgCookieDomain',
+	'wgCookiePath',
+	'wgCookieSecure',
+	'wgDisableCookieCheck',
+	'wgCookiePrefix',
+	'wgSessionName',
+	'wgAllowExternalImages',
+	'wgAllowExternalImagesFrom',
+	'wgEnableImageWhitelist',
+	'wgAllowImageMoving',
+	'wgUseTeX',
+	'wgDisableCounters',
+	'wgDisableTextSearch',
+	'wgDisableSearchContext',
+	'wgEnableMWSuggest',
+	'wgEnableUploads',
+	'wgShowEXIF',
+	'wgRemoteUploads',
+	'wgDisableAnonTalk',
+	'wgFileBlacklist',
+	'wgMimeTypeBlacklist',
+	'wgCheckFileExtensions',
+	'wgStrictFileExtensions',
+	'wgUploadSizeWarning',
+	'wgNamespacesToBeSearchedDefault',
+	'wgNamespacesToBeSearchedProject',
+	'wgSiteNotice',
+	'wgRCMaxAge',
+	'wgUseMetadataEdit',
+	'wgMetadataWhitelist',
+	'wgUseCopyrightUpload',
+	'wgCheckCopyrightUpload',
+	'wgCapitalLinks',
+	'wgImportSources',
+	'wgImportTargetNamespace',
+	'wgExportAllowHistory',
+	'wgExportMaxHistory',
+	'wgExportAllowListContributors',
+	'wgUseTidy',
+	'wgAlwaysUseTidy',
+	'wgValidateAllHtml',
+	'wgDefaultSkin',
+	'wgAllowUserSkin',
+	'wgDefaultUserOptions',
+	'wgAllowRealName',
+	'wgValidSkinNames',
+	'wgAllowUserJs',
+	'wgAllowUserCss',
+	'wgUseSiteJs',
+	'wgUseSiteCss',
+	'wgAllowPageInfo',
+	'wgEnableHtmlDiff',
+	'wgUseRCPatrol',
+	'wgUseNPPatrol',
+	'wgCategoryPrefixedDefaultSortkey',
+	'wgLocaltimezone',
+	'wgLocalTZoffset',
+	'wgAllowSpecialInclusion',
+	'wgEnableScaryTranscluding',
+	'wgUseTrackbacks',
+	'wgAllowDisplayTitle',
+	'wgRestrictDisplayTitle',
+	'wgContentNamespaces',
+	'wgEnableAPI',
+	'wgEnableWriteAPI',
+	'wgExpensiveParserFunctionLimit',
+	'wgMaximumMovedPages',
+	'wgFixDoubleRedirects',
+	'wgUseAutomaticEditSummaries',
+);
